Revision history for Perl extension Finance-Robinhood

{{$NEXT}}

	- Equity historicals
	- L2 price data if Gold subscriber

0.92_003 2019-05-03T23:58:44Z

	- Auth challenge
	- Ability to store and reload tokens

0.92_002 2019-04-13T17:22:42Z

    - Fix Role::Tiny prereq for smokers

0.92_001 2019-04-13T03:59:46Z

    - Progress
    - Redesigned from the ground up now that Crypto, Options, and OAuth2 are rolled in
    - Use Mojo::Base, Mojo::UserAgent, etc. for uniformity

0.21 2017-12-28T22:14:10Z

    - Require Moo 2.003004 due to an upstream bug in 2.003003

0.20 2017-12-27T15:09:49Z

    - Expose historicals call in ::Instument
    - Make Time::Moment the default time class

0.19 2017-03-29T16:26:33Z

    - Robinhood Instant/Gold features:
        - extended_hours value in ::Order
        - override_day_trade_checks value in ::Order
        - override_day_trade_checks value in ::Order
    - Gather orders after a certain time with ::Robinhood::list_orders({since => $timestamp})

0.18 2017-03-05T17:28:26Z

    - Add ::Robinhood::fundamentals(...) function/->fundamentals(...) method

0.17 2017-03-05T02:07:57Z

    - Lazy load ::Quote data
    - Expose source of quote (consolidated tape, nasdaq live, etc.)

0.16 2017-02-11T21:13:47Z

    - Add ::Instrument::Fundamentals class
    - Add support for bound historical data (...see docs)
    - Lazy load ::Market data
    - More lazy load stuff

0.15 2016-12-29T16:42:12Z

    - 'next' and 'previous' keys were getting messed up in paginated results
    - Various minor, nondescript fixes

0.14 2016-12-28T04:08:26Z

    - Lazy load ::Instrument data (save the API server on watchlist calls)
    - Expose day_trade_ratio, min_tick_size, country, and margin_initial_ratio in ::Instrument objects
    - ::Instrument->quote() returns a single quote object
    - Use Time::Piece if loaded (fallback to DateTime)
    - Rollback 0.12 now that the API is fixed

0.13 2016-12-25T19:41:16Z

    - Fix adding single instrument to watchlist
