@@ -28,6 +28,7 @@ use Time::Moment;
 sub _test__init {
     my $rh = t::Utility::rh_instance(1);
     my ($component) = $rh->options_events->next->equity_components;
+    $component // skip_all('No equity component in event');
     isa_ok($component, __PACKAGE__);
     t::Utility::stash('COMPONENT', $component);    #  Store it for later
 }
