@@ -2,6 +2,8 @@ Revision history for Perl extension Finance-Robinhood
 
 {{$NEXT}}
 
+	- Crypto complete
+	- Correct token refresh scheme
 	- Equity historicals
 	- L2 price data if Gold subscriber
 
